--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,14 @@
         android:theme="@style/Theme.GlobaltipsApp"
         tools:targetApi="31">
         <activity
+            android:name=".FrontApp"
+            android:exported="false"
+            android:label="@string/title_activity_front_app"
+            android:theme="@style/Theme.GlobaltipsApp.NoActionBar" />
+        <activity
+            android:name=".Registro"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
