--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.GlobaltipsApp"
         tools:targetApi="31">
         <activity
+            android:name=".Principal"
+            android:exported="false" />
+        <activity
+            android:name=".ui.main.Principal"
+            android:exported="false" />
+        <activity
             android:name=".FrontApp"
             android:exported="false"
             android:label="@string/title_activity_front_app"
